Ensure sponsor logos don't overlap footer ribbon.

--- a/assets/stylesheets/components/_sponsors.scss
+++ b/assets/stylesheets/components/_sponsors.scss
@@ -2,7 +2,7 @@
 	align-items: center;
 	display: flex;
 	justify-content: space-between;
-	margin: 0 auto;
+	margin: $size__site-gutter auto;
 	max-width: $size__site-width;
 
 	.sponsor {
